<resources>
    <string name="app_name">RemindMe</string>
    <string name="facebook_application_id" translatable="false">609414666311867</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_sign_in">Verify</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="channel_name">RemindMe</string>
    <string name="channel_description">Salutation</string>
</resources>
